@@ -1,1 +1,1 @@
-agar.gui.widget.fixed_plotter agar-gui-widget-fixed_plotter.ads
+agar.gui.widget.fixed_plotter agar-gui-widget-fixed_plotter.ads agar-gui-widget-fixed_plotter.adb
